--- a/style.css
+++ b/style.css
@@ -43,3 +43,26 @@ body {
     font-size: 0.6rem;
     color: #555;
 }
+
+h1 {
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 3rem;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    letter-spacing: 3px;
+}
+
+p {
+    font-size: 1rem;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: justify;
+    font-weight: normal
+}
+
+p + p {
+    margin-top: 20px;
+}
