--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     background-color: black;
-    width: 1080px;
+    max-width: 1080px;
     margin: auto;
 }
 
@@ -65,4 +65,16 @@ p {
 
 p + p {
     margin-top: 20px;
+}
+
+
+@media (max-width: 500px) {
+    * {
+        font-size: 12px;
+    }
+
+    p {
+        padding: 0 20px;
+        font-size: 1.4rem;
+    }
 }
